assets/css/compiled/main.css
/* ... */
:is(.dark .dark\:hover\:bg-primary-900:hover) {
  --tw-bg-opacity:1;
  background-color:rgba(var(--color-primary-900), var(--tw-bg-opacity))
}

:is(.dark .dark\:hover\:text-neutral-800:hover) {
  --tw-text-opacity:1;
  color:rgba(var(--color-neutral-800), var(--tw-text-opacity))
}

:is(.dark .dark\:hover\:text-primary-400:hover) {
  --tw-text-opacity:1;
  color:rgba(var(--color-primary-400), var(--tw-text-opacity))
}

:is(.dark .dark\:hover\:opacity-100:hover) {
  opacity:1
}

:is(.dark .dark\:focus\:bg-primary-900:focus) {
  --tw-bg-opacity:1;
  background-color:rgba(var(--color-primary-900), var(--tw-bg-opacity))
}

:is(.dark .group:hover .dark\:group-hover\:text-neutral-700) {
  --tw-text-opacity:1;
  color:rgba(var(--color-neutral-700), var(--tw-text-opacity))
}

:is(.dark .group:hover .dark\:group-hover\:text-primary-400) {
  --tw-text-opacity:1;
  color:rgba(var(--color-primary-400), var(--tw-text-opacity))
}

@media (min-width: 640px) {
  .sm\:mb-0 {
    margin-bottom:0px
  }

  .sm\:mt-16 {
    margin-top:4rem
  }

  .sm\:w-1\/2 {
    width:50%
  }

  .sm\:grid-cols-2 {
    grid-template-columns:repeat(2, minmax(0, 1fr))
  }

  .sm\:flex-row {
    flex-direction:row
  }

  .sm\:gap-x-3 {
    -moz-column-gap:0.75rem;
         column-gap:0.75rem
  }

  .sm\:overflow-hidden {
    overflow:hidden
  }

  .sm\:p-6 {
    padding:1.5rem
  }

  .sm\:px-14 {
    padding-left:3.5rem;
    padding-right:3.5rem
  }

  .sm\:px-6 {
    padding-left:1.5rem;
    padding-right:1.5rem
  }

  .sm\:py-24 {
    padding-top:6rem;
    padding-bottom:6rem
  }

  .sm\:text-lg {
    font-size:1.125rem;
    line-height:1.75rem
  }
}

@media (min-width: 853px) {
  .md\:-mr-16 {
    margin-right:-4rem
  }

  .md\:ml-12 {
    margin-left:3rem
  }

  .md\:mr-7 {
    margin-right:1.75rem
  }

  .md\:mt-0 {
    margin-top:0px
  }

  .md\:flex {
    display:flex
  }

  .md\:hidden {
    display:none
  }

  .md\:h-56 {
    height:14rem
  }

  .md\:h-\[200px\] {
    height:200px
  }

  .md\:w-1\/3 {
    width:33.333333%
  }

  .md\:w-auto {
    width:auto
  }

  .md\:columns-3 {
    -moz-columns:3;
         columns:3
  }

  .md\:grid-cols-3 {
    grid-template-columns:repeat(3, minmax(0, 1fr))
  }

  .md\:flex-row {
    flex-direction:row
  }

  .md\:flex-row-reverse {
    flex-direction:row-reverse
  }

  .md\:justify-start {
    justify-content:flex-start
  }

  .md\:gap-y-3 {
    row-gap:0.75rem
  }

  .md\:gap-x-3 {
    -moz-column-gap:0.75rem;
         column-gap:0.75rem
  }

  .md\:p-\[10vh\] {
    padding:10vh
  }

  .md\:px-24 {
    padding-left:6rem;
    padding-right:6rem
  }
}

@media (min-width: 1024px) {
  .lg\:absolute {
    position:absolute
  }

  .lg\:relative {
    position:relative
  }

  .lg\:sticky {
    position:sticky
  }

  .lg\:left-0 {
    left:0px
  }

  .lg\:top-10 {
    top:2.5rem
  }

  .lg\:top-\[140px\] {
    top:140px
  }

  .lg\:order-last {
    order:9999
  }

  .lg\:m-0 {
    margin:0px
  }

  .lg\:mx-0 {
    margin-left:0px;
    margin-right:0px
  }

  .lg\:mx-auto {
    margin-left:auto;
    margin-right:auto
  }

  .lg\:ml-auto {
    margin-left:auto
  }

  .lg\:mt-0 {
    margin-top:0px
  }

  .lg\:block {
    display:block
  }

  .lg\:grid {
    display:grid
  }

  .lg\:hidden {
    display:none
  }

  .lg\:h-72 {
    height:18rem
  }

  .lg\:h-full {
    height:100%
  }

  .lg\:w-1\/4 {
    width:25%
  }

  .lg\:w-auto {
    width:auto
  }

  .lg\:max-w-7xl {
    max-width:80rem
  }

  .lg\:max-w-none {
    max-width:none
  }

  .lg\:max-w-xs {
    max-width:20rem
  }

  .lg\:columns-4 {
    -moz-columns:4;
         columns:4
  }

  .lg\:grid-flow-col-dense {
    grid-auto-flow:column dense
  }

  .lg\:grid-cols-2 {
    grid-template-columns:repeat(2, minmax(0, 1fr))
  }

  .lg\:flex-row {
    flex-direction:row
  }

  .lg\:gap-24 {
    gap:6rem
  }

  .lg\:p-\[12vh\] {
    padding:12vh
  }

  .lg\:px-0 {
    padding-left:0px;
    padding-right:0px
  }

  .lg\:px-32 {
    padding-left:8rem;
    padding-right:8rem
  }

  .lg\:px-8 {
    padding-left:2rem;
    padding-right:2rem
  }

  .lg\:py-16 {
    padding-top:4rem;
    padding-bottom:4rem
  }

  .lg\:py-32 {
    padding-top:8rem;
    padding-bottom:8rem
  }
}

@media (min-width: 1280px) {
  .xl\:w-1\/4 {
    width:25%
  }

  .xl\:grid-cols-4 {
    grid-template-columns:repeat(4, minmax(0, 1fr))
  }
}

@media (min-width: 1536px) {
  .\32xl\:grid-cols-5 {
    grid-template-columns:repeat(5, minmax(0, 1fr))
  }
}

.ltr\:-left-6:where([dir="ltr"], [dir="ltr"] *) {
  left:-1.5rem
}

.ltr\:right-0:where([dir="ltr"], [dir="ltr"] *) {
  right:0px
}

.ltr\:-ml-5:where([dir="ltr"], [dir="ltr"] *) {
  margin-left:-1.25rem
}

.ltr\:ml-2:where([dir="ltr"], [dir="ltr"] *) {
  margin-left:0.5rem
}

.ltr\:mr-14:where([dir="ltr"], [dir="ltr"] *) {
  margin-right:3.5rem
}

.ltr\:mr-4:where([dir="ltr"], [dir="ltr"] *) {
  margin-right:1rem
}

.ltr\:block:where([dir="ltr"], [dir="ltr"] *) {
  display:block
}

.ltr\:inline:where([dir="ltr"], [dir="ltr"] *) {
  display:inline
}

.ltr\:hidden:where([dir="ltr"], [dir="ltr"] *) {
  display:none
}

.ltr\:border-l:where([dir="ltr"], [dir="ltr"] *) {
  border-left-width:1px
}

.ltr\:pl-5:where([dir="ltr"], [dir="ltr"] *) {
  padding-left:1.25rem
}

.ltr\:pr-2:where([dir="ltr"], [dir="ltr"] *) {
  padding-right:0.5rem
}

.ltr\:pr-3:where([dir="ltr"], [dir="ltr"] *) {
  padding-right:0.75rem
}

.ltr\:text-right:where([dir="ltr"], [dir="ltr"] *) {
  text-align:right
}

@media (min-width: 640px) {
  .ltr\:sm\:mr-7:where([dir="ltr"], [dir="ltr"] *) {
    margin-right:1.75rem
  }

  .ltr\:sm\:last\:mr-0:last-child:where([dir="ltr"], [dir="ltr"] *) {
    margin-right:0px
  }
}

@media (min-width: 1024px) {
  .ltr\:lg\:pl-8:where([dir="ltr"], [dir="ltr"] *) {
    padding-left:2rem
  }
}

.rtl\:-right-6:where([dir="rtl"], [dir="rtl"] *) {
  right:-1.5rem
}

.rtl\:left-0:where([dir="rtl"], [dir="rtl"] *) {
  left:0px
}

.rtl\:-mr-5:where([dir="rtl"], [dir="rtl"] *) {
  margin-right:-1.25rem
}
/* ... */

